--- a/k8s/manifests/deployment.yml
+++ b/k8s/manifests/deployment.yml
@@ -2,20 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: go-web-app-application
-  labels:
-    app: go-web-app-application
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: go-web-app-application
+      app: go-web-app
   template:
     metadata:
       labels:
-        app: go-web-app-application
+        app: go-web-app
     spec:
       containers:
       - name: go-web-app-application
-        image: lakshmi569/go-web-app-application:v1
+        image: lakshmi569/go-web-app:version1
         ports:
         - containerPort: 8080
